# anki-cook

./: .gitignore  Dockerfile  Examples.md  LICENSE  README.md  gunicorn.conf.py  pyproject.toml
src/anki_cook/: cli.py  gen_wordlist.py  get_sounds.py  make_deck.py  openai_client.py  save_deck.py  wordlist.py
src/anki_cook/server/: app.py  schema.py
src/anki_cook/server/css/: base.css
src/anki_cook/server/templates/: about.html  cheers.html  constants.jinja  download.html  index.html  layout.html  preview.html
src/anki_cook/templates/: native.html  style.css  target.html  target_boost_extra.html
src/anki_cook/utils/: load_static.py  source_envfile.py
